; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_panicPutHex.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32/extr_panic.c_panicPutHex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @panicPutHex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @panicPutHex(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %28, %1
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 8
  br i1 %7, label %8, label %31

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = ashr i32 %9, 28
  %11 = and i32 %10, 15
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %12, 10
  br i1 %13, label %14, label %19

14:                                               ; preds = %8
  %15 = load i32, i32* %4, align 4
  %16 = add nsw i32 48, %15
  %17 = trunc i32 %16 to i8
  %18 = call i32 @panicPutChar(i8 signext %17)
  br label %25

19:                                               ; preds = %8
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 97, %20
  %22 = sub nsw i32 %21, 10
  %23 = trunc i32 %22 to i8
  %24 = call i32 @panicPutChar(i8 signext %23)
  br label %25

25:                                               ; preds = %19, %14
  %26 = load i32, i32* %2, align 4
  %27 = shl i32 %26, 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %25
  %29 = load i32, i32* %3, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %3, align 4
  br label %5

31:                                               ; preds = %5
  ret void
}

declare dso_local i32 @panicPutChar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
